force-app/main/default/objects/EC_Division_Marketing_Content__c/EC_Division_Marketing_Content__c.object-meta.xml
<CustomObject>
    <description>Object to hold the division specific marketing content</description>
    <label>Division Marketing Content</label>
    <nameField>
        <label>Division Marketing Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Division Marketing Content</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>