force-app/main/default/objects/EC_Division_Marketing_Content__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is Image active or inactive</description>
    <inlineHelpText>active or inactive</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>