force-app/main/default/objects/EC_Division_Marketing_Content__c/fields/Body_Text__c.field-meta.xml
<CustomField>
    <fullName>Body_Text__c</fullName>
    <description>Marketing Tile Body Text</description>
    <inlineHelpText>Marketing Tile Body Text</inlineHelpText>
    <label>Body Text</label>
    <type>TextArea</type>
</CustomField>