force-app/main/default/objects/EC_Division_Marketing_Content__c/fields/EC_Content__c.field-meta.xml
<CustomField>
    <fullName>EC_Content__c</fullName>
    <description>content for the image</description>
    <inlineHelpText>content for the image</inlineHelpText>
    <label>Image Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>