force-app/main/default/objects/EC_Division_Marketing_Content__c/fields/EC_Division__c.field-meta.xml
<CustomField>
    <fullName>EC_Division__c</fullName>
    <description>division to which this image to be displayed</description>
    <inlineHelpText>Ad tile division</inlineHelpText>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INSTITUTIONAL</fullName>
            </value>
            <value>
                <fullName>WATER</fullName>
            </value>
            <value>
                <fullName>PAPER</fullName>
            </value>
            <value>
                <fullName>FOOD &amp; BEVERAGE</fullName>
            </value>
            <value>
                <fullName>ENERGY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>