force-app/main/default/objects/EC_Division_Marketing_Content__c/fields/Image_CTA_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_CTA_URL__c</fullName>
    <description>Call to action URL for image</description>
    <inlineHelpText>target site for image click</inlineHelpText>
    <label>Image CTA URL</label>
    <type>Url</type>
</CustomField>