force-app/main/default/objects/EC_Division_Marketing_Content__c/fields/Image_CTA_URL_Type__c.field-meta.xml
<CustomField>
    <fullName>Image_CTA_URL_Type__c</fullName>
    <description>internal or external link</description>
    <inlineHelpText>internal or external link</inlineHelpText>
    <label>Image CTA URL Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>