force-app/main/default/objects/EC_Division_Marketing_Content__c/fields/Open_In_NewTab__c.field-meta.xml
<CustomField>
    <fullName>Open_In_NewTab__c</fullName>
    <formula>IF(ISPICKVAL(Image_CTA_URL_Type__c, &apos;External&apos;), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open In NewTab</label>
    <type>Checkbox</type>
</CustomField>