force-app/main/default/objects/EC_Division_Marketing_Content__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>sequence in which image to be displayed</description>
    <inlineHelpText>sequence of image on home page</inlineHelpText>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>