force-app/main/default/objects/EC_Division_Marketing_Content__c/fields/Tile_CTA__c.field-meta.xml
<CustomField>
    <fullName>Tile_CTA__c</fullName>
    <description>Marketing Tile CTA Button text</description>
    <inlineHelpText>Marketing Tile CTA Button text</inlineHelpText>
    <label>Tile CTA</label>
    <length>80</length>
    <type>Text</type>
</CustomField>