force-app/main/default/objects/EC_Division_Marketing_Content__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Marketing Tile Title</description>
    <inlineHelpText>Marketing Tile Title</inlineHelpText>
    <label>Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>